tests/baselines/reference/anyIndexedAccessArrayNoException.errors.txt
tests/cases/compiler/anyIndexedAccessArrayNoException.ts(1,12): error TS1122: A tuple type element list cannot be empty.
tests/cases/compiler/anyIndexedAccessArrayNoException.ts(1,12): error TS2538: Type '[]' cannot be used as an index type.


==== tests/cases/compiler/anyIndexedAccessArrayNoException.ts (2 errors) ====
    var x: any[[]];
               ~~
!!! error TS1122: A tuple type element list cannot be empty.
               ~~
!!! error TS2538: Type '[]' cannot be used as an index type.
    